# grep-prs

./: README.md  grep-prs.py  grep_prs.py  mypy.ini  setup.cfg  test_grep_prs.py  tox.ini
.github/workflows/: ci.ini  ci.yml
