[metadata]
name = grep-prs
version = 0.1.0
description = Grep for a pattern in all open GitHub PRs
long_description = file: README.rst, LICENSE.rst
keywords = git github
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development
    Topic :: Software Development :: Version Control
    Topic :: Software Development :: Version Control :: Git
    Topic :: Utilities

[options]
py_modules = grep_prs
install_requires =
    rich
    github3.py

[options.entry_points]
console_scripts =
    grep-prs=grep_prs:main
